Visibility Fix

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -128,7 +128,7 @@ body {
 }
 
 .todo-list-item .star-filled {
-    color : rgb(249, 249, 1);
+    color : rgb(204, 204, 0);
     margin-right: 10px;
     cursor:pointer;
     text-decoration: none;
